--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 :root{
     --btn-color: rgb(34, 143, 177);
     --font-gray: rgb(107, 107, 107);
+    --back-contact: #252B42;
 }
 .site-hero{
     background-image: url(https://images.unsplash.com/photo-1557426272-fc759fdf7a8d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
@@ -24,8 +27,72 @@
     left: 0px;
     background-color: rgba(0, 0, 0, 0.35);
 }
-footer{
-    margin: 25px 250px 25px 200px;
+/* Pricing Section*/
+
+
+
+/* Contact Section*/
+.site-contact{
+    background-color: var(--back-contact);
+    display: flex;
+    flex-direction: column;
+}
+.contact-header{
+    display: flex;
+    padding: 50px 300px 35px 220px;
+}
+.contact-header div{
+    margin-right: 160px;
+}
+.contact-header img{
+    height: 130px;
+}
+.contact-form{
+    background-color: white;
+    margin: 0px 350px 0px 660px;
+}
+.contact-form img{
+   position: absolute;
+   left: 260px;
+   clip: rect(0, 400px, 500px, 80px);
+}
+.form h4{
+    padding-left: 120px;
+    margin-top: 18px;
+    margin-bottom: 15px;
+}
+.form-btn{
+    padding: 5px 75px;
+    margin-left: 130px;
+    border-radius: 5px;
+    background-color: var(--btn-color);
+    text-decoration: none;
+    color: white;
+    font-size: 13px;
+}
+.form-input{
+    padding: 0px 100px 10px 90px;
+}
+.form label{
+    font-size: 14px;
+}
+.form-input input{
+    border-radius: 5px;
+    width: 275px;
+    height: 24px;
+    border: 1px solid gray;
+}
+
+
+
+/* Footer Section*/
+.site-footer{
+    margin: 120px 250px 25px 200px;  
+}
+.site-footer i{
+    color: var(--btn-color);
+    margin: 0 8px;
+    font-size: 18px;
 }
 .footer-1{
     display: flex;
@@ -43,7 +110,7 @@ footer{
     height: 20px;
     border-radius: 5px;
     color: white;
-    font-weight: 500
+    font-size: 12px;
 }
 .footer-2{
     margin: 40px 0;
@@ -55,14 +122,14 @@ footer{
 }
 .footer-2 p{
     margin: 5px 0;
-    font-size: 14px;
+    font-size: 12px;
     color: var(--font-gray);
 }
 .footer-3{
     display: flex;
     justify-content: space-between;
 }
-.footer-3 i{
-    color: var(--btn-color);
-    margin: 0 8px;
+.footer-3 p{
+    color: var(--font-gray);
+    font-size: 14px;
 }
