--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
     border-radius: 10px;
     margin: 0 10px;
     text-align: center;
-    transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out;
 }
 .price-table:hover {
     border: 2px solid var(--price-card);
@@ -124,7 +124,6 @@
 .site-contact{
     background-color: var(--back-contact);
     display: flex;
-    flex-direction: column;
 }
 .contact-header{
     display: flex;
@@ -141,7 +140,6 @@
     height: 140px;
 }
 .contact-form{
-   /*  margin: 0px 350px 0px 660px; */
     background-color: white;
     display: flex;
     position: absolute;
@@ -149,9 +147,6 @@
     margin-top: 260px;
 }
 .contact-form img{
-  /*  position: absolute;
-   left: 260px;
-   clip: rect(0, 400px, 500px, 80px); */
    width: 270px;
    height: 430px;   
 }
@@ -171,13 +166,18 @@
     text-align: center;
 }
 .form-btn{
-    padding: 5px 110px;
+    padding: 7px 110px;
     margin-left: 90px;
     border-radius: 5px;
     background-color: var(--btn-color);
     text-decoration: none;
     color: white;
     font-size: 13px;
+}
+.form-btn:hover {
+    background: #fff;
+    color: var(--btn-color);
+    border: 2px solid var(--btn-color);
 }
 .form-input{
     padding: 0px 60px 10px 90px;
@@ -220,6 +220,11 @@
     border-radius: 5px;
     color: white;
     font-size: 12px;
+}
+.footer-1 a:hover {
+    background: #fff;
+    color: var(--btn-color);
+    border: 2px solid var(--btn-color);
 }
 .footer-2{
     margin: 40px 0;
