--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,28 @@
     background-color: rgb(231, 231, 231);
     border: 1px solid rgb(192, 192, 192);
 }
+.boton-up{
+    width: 50px;
+    height: 50px;
+    background: var(--btn-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 50%;
+    font-size: 20px;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    cursor: pointer;
+    border: 4px solid transparent;
+    transition: all 300ms ease;
+    transform: scale(0); 
+}
+.boton-up:hover{
+    transform: scale(1.1);
+    border-color: rgba(0,0,0,0.1);
+}
 
 /*******  Footer Section  ********/
 .site-footer{
