--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,31 @@
     border: 1px solid white;
 }
 
+/****   Content   *****/
+.site-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 80px 150px;
+}
+.site-content h2{
+    margin: 20px 0;
+}
+.site-content ul{
+    list-style: none;
+    margin-right: 80px;
+}
+.site-content li{
+    margin-bottom: 12px;
+    font-size: 16px;
+}
+.site-content span{
+    font-weight: bold;
+    font-size: 17px;
+    color: var(--price-title);
+}
+
+
+
 /*****    Testimonials   *****/
 .card{
     position: relative;
@@ -106,10 +131,12 @@
     margin-bottom: 20px;
     display: inline-block;
     position: relative;
+    filter: grayscale(80%);
 }
 .card img:hover{
     height: 120px;
     width: 120px;
+    filter: saturate(100%);
     margin-bottom: 0px;
 }
 .card blockquote {
