--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,22 @@
+@media(min-width:1200px){
+    .menu i{
+        display: none;
+    }
+}
 @media(max-width: 1200px){
+    .menu i {
+        display: none;
+    }
     .site-price{
         margin: 50px 90px;
+    }
+    .site-content{
+        margin: 60px 30px;
+    }
+    .site-content img{
+        height: 325px;
+        width: 450px;
+        margin: 40px 0;
     }
     .pricing-table{
         grid-template-columns: 1fr 1fr 1fr;
@@ -18,6 +34,21 @@
     }
 }
 @media(max-width: 900px){
+    .menu i {
+        display: none;
+    }
+    .site-title{
+        margin-top: 80px;
+    }
+    .site-content{
+        grid-template-columns: 1fr;
+        margin: 40px 0px;
+    }
+    .site-content img{
+        height: 425px;
+        width: 650px;
+        margin: 20px 50px 0;
+    }
     .site-price{
         margin: 40px 100px 25px;
     }
@@ -43,6 +74,12 @@
     }
 }
 @media(min-width:768px) and (max-width:800px){
+    .nav-2,.menu{
+        display: none;
+    }
+    .site-title{
+        margin-top: 50px;
+    }
     .contact-form{
         left: 0px;
         right: 0px;
@@ -50,6 +87,24 @@
     }
 }
 @media(max-width:768px){
+    .nav-2,.nav-3{
+        display: none;
+    }
+    .site-title{
+        margin-top: 60px;
+    }
+    .site-title h1{
+        font-size: 25px;
+        width: 65%;
+    }
+    .site-content{
+        margin: 40px 0px;
+    }
+    .site-content img{
+        height: 350px;
+        width: 500px;
+        margin: 20px 60px 0;
+    }
     .site-price{
         margin: 40px 90px;
     }
@@ -109,6 +164,21 @@
     }
 }
 @media (max-width:600px){
+    .site-title{
+        margin-top: 40px;
+    }
+    .site-title h1{
+        font-size: 25px;
+        width: 60%;
+    }
+    .site-content{
+        margin: 40px 0px;
+    }
+    .site-content img{
+        height: 250px;
+        width: 350px;
+        margin: 20px 60px 0;
+    }
     .site-price{
         margin: 40px 50px;
     }
