--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@
 .btn-comenzar:hover,.btn-ins:hover{
     background-color: rgb(63, 155, 63);
 }
+.menu i{
+    color: white;
+    font-size: 25px;
+}
 .site-title{
     display: flex;
     flex-direction: column;
@@ -65,7 +69,7 @@
     text-align: center;
     position: relative;
     line-height: 3rem;
-    margin-top: 130px;
+    margin-top: 110px;
     color: white;
 }
 .site-title h1{
@@ -94,11 +98,14 @@
     margin: 80px 150px;
 }
 .site-content h2{
-    margin: 20px 0;
+    margin: 20px 40px;
 }
 .site-content ul{
     list-style: none;
-    margin-right: 80px;
+    margin: 0 40px;
+}
+.site-content img{
+    margin-left: 50px;
 }
 .site-content li{
     margin-bottom: 12px;
