--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@
 .site-content{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 80px 150px;
+    margin: 70px 150px;
 }
 .site-content h2{
     margin: 20px 40px;
@@ -116,8 +116,39 @@
     font-size: 17px;
     color: var(--price-title);
 }
+.slider{
+    margin: auto;
+    width: 95%;
+    overflow: hidden;
+}
+.slider ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: animar 10s infinite alternate linear;
+}
+.slider li{
+    width: 100%;
+    list-style: none;
+}
+.slider img{
+    margin:0;
+    width: 100%;
+}
 
-
+@keyframes animar{
+    0%{margin-left: 0;}
+    20%{margin-left: 0;}
+    
+    25%{margin-left: -100%;}
+    45%{margin-left:-100%;}
+    
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+    
+    75%{margin-left: -300%;}
+    100%{margin-left: -300%;}
+}
 
 /*****    Testimonials   *****/
 .card{
